tela de cadeiras pronta

--- a/UFCMobile/View/cells/Agenda/AgendaTableViewCell.xib
+++ b/UFCMobile/View/cells/Agenda/AgendaTableViewCell.xib
@@ -125,6 +125,9 @@
                 <outlet property="txtLocal" destination="nyo-lp-F6c" id="jqU-9x-Fsh"/>
                 <outlet property="txtNome" destination="WMG-Cy-sPA" id="H3y-FX-Cwa"/>
                 <outlet property="txtTurno" destination="9hX-ki-hH9" id="pTw-8N-gnF"/>
+                <outlet property="viewBarra" destination="r9u-mt-hmU" id="oHT-i1-fau"/>
+                <outlet property="viewBolinhaDentro" destination="dwX-vM-LgV" id="MtP-HQ-l2E"/>
+                <outlet property="viewFundo" destination="4cM-6a-8zL" id="6pF-E7-CHi"/>
                 <outlet property="viewStatus" destination="crf-mC-V58" id="KFH-lL-Er9"/>
             </connections>
             <point key="canvasLocation" x="40" y="87"/>
