--- a/UFCMobile/View/cells/Chat/ChatTableViewCell.xib
+++ b/UFCMobile/View/cells/Chat/ChatTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Baseline standard spacing" minToolsVersion="9.0"/>
@@ -39,19 +39,22 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titulo da Cadeira" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nfY-Eg-9Qo">
-                        <rect key="frame" x="92" y="18" width="220.5" height="25"/>
+                        <rect key="frame" x="92" y="18" width="222" height="25"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.043137254899999998" green="0.53333333329999999" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="08:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ypv-5s-hj5">
-                        <rect key="frame" x="320.5" y="18" width="36.5" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="322" y="18" width="35" height="14.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="LGI-fn-bzs"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EpE-U0-f1H">
-                        <rect key="frame" x="92" y="43" width="220.5" height="29"/>
+                        <rect key="frame" x="92" y="43" width="222" height="29"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -71,12 +74,14 @@
                     <constraint firstItem="WTs-hW-P3i" firstAttribute="leading" secondItem="Vh7-Oc-4jh" secondAttribute="trailing" constant="8" id="eXU-9F-XIE"/>
                     <constraint firstItem="EpE-U0-f1H" firstAttribute="width" secondItem="nfY-Eg-9Qo" secondAttribute="width" id="hsX-of-lol"/>
                     <constraint firstItem="Ypv-5s-hj5" firstAttribute="leading" secondItem="nfY-Eg-9Qo" secondAttribute="trailing" constant="8" id="mEg-cS-Nbp"/>
+                    <constraint firstAttribute="trailing" secondItem="Ypv-5s-hj5" secondAttribute="trailing" id="t0U-9b-52a"/>
                     <constraint firstItem="Ypv-5s-hj5" firstAttribute="top" secondItem="nfY-Eg-9Qo" secondAttribute="top" id="zfp-PK-LgT"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="imgFoto" destination="WTs-hW-P3i" id="oRN-M1-ANG"/>
+                <outlet property="txtTitulo" destination="nfY-Eg-9Qo" id="PVa-Cr-Peq"/>
                 <outlet property="updateView" destination="Vh7-Oc-4jh" id="JBl-jN-MuT"/>
             </connections>
             <point key="canvasLocation" x="71.5" y="136.5"/>
